Fix filtering: don't jump to the beginning of the page on each filter request.

--- a/resources/public/css/browser-view.css
+++ b/resources/public/css/browser-view.css
@@ -78,6 +78,11 @@ body {
     width: 70px;
 }
 
+.filtering a {
+    text-decoration: underline;
+    cursor: pointer;
+}
+
 .filtering a.selected {
     text-decoration: none;
     color: #666;
